@@ -316,7 +316,7 @@ public final class LinkExpression extends SimpleExpression {
         
         if (isLinkBaseAbsolute(linkBase)) {
             return linkBase + parametersBuffer.toString() + urlFragment;
-        } else if (!isWebContext(arguments.getContext()) && isLinkBaseServerRelative(linkBase)) {
+        } else if (!isWebContext(processingContext.getContext()) && isLinkBaseServerRelative(linkBase)) {
             return linkBase.substring(1) + parametersBuffer.toString() + urlFragment;
         }
         
